--- a/index.html
+++ b/index.html
@@ -190,21 +190,21 @@ $(function() {
 
 <div class="menu__container menu__container--2">
 <div class="menu">
-<a href="https://roo-t.github.io/apps-/"
+<a href="https://hzhack.github.io/ios/"
 <i class="fab fa-apple fa-5x"></i>
  Ios Store
 </a></div></div>
 
 <div class="menu__container menu__container--2">
 <div class="menu">
-<a href="https://roo-t.github.io/app/"
+<a href="https://hzhack.github.io/Android/"
 <i class="fab fa-android fa-5x"></i>
  Android Store
 </a></div></div>
 
 <div class="menu__container menu__container--2">
 <div class="menu">
-<a href="https://roo-t.github.io/dev/"
+<a href="https://hzhack.github.io/jailbreak/"
 <i class="fab fa-linux fa-5x"></i>
  jailbreak Source
 </a></div></div>
