--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@ $(function() {
  jailbreak Source
 </a></div></div>
 
+<div class="menu__container menu__container--2">
+<div class="menu">
+<a href="https://hzhack.github.io/jailbreak/"
+<i class="fab fa-python fa-5x"></i>
+ Script Python
+</a></div></div>
+
 <footer><p>Created with 
 <i class="fa fa-heart"></i> by
 <a target="_blank" href="https://www.snapchat.com/add/sww_p">Hibaldz : </a>
