--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ $(function() {
 
 <div class="menu__container menu__container--2">
 <div class="menu">
-<a href="https://hzhack.github.io/jailbreak/"
+<a href="https://hzhack.github.io/icloud/"
 <i class="fab fa-Icloud fa-5x"></i>
  Unlook Icloud
 </a></div></div>
