--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ $(function() {
 <div class="menu__container menu__container--2">
 <div class="menu">
 <a href="https://hzhack.github.io/tools/"
-<i class="fab fa-apple fa-5x"></i>
+<i class="fab fa-cydia fa-5x"></i>
  JailBreak Tools
 </a></div></div>
 	
@@ -219,7 +219,7 @@ $(function() {
 <div class="menu__container menu__container--2">
 <div class="menu">
 <a href="https://hzhack.github.io/icloud/"
-<i class="fab fa-Icloud fa-5x"></i>
+<i class="fab fa-iphone fa-5x"></i>
  Unlook Icloud
 </a></div></div>
 
