--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ $(function() {
 <div class="menu__container menu__container--2">
 <div class="menu">
 <a href="https://hzhack.github.io/tools/"
-<i class="fab fa-cydia fa-5x"></i>
+<i class="fab fa-tool fa-5x"></i>
  JailBreak Tools
 </a></div></div>
 	
