--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@ $(function() {
 
 <div class="menu__container menu__container--2">
 <div class="menu">
+<a href="https://hzhack.github.io/ajr/"
+<i class="fab fa-tool fa-5x"></i>
+ قران كريم
+</a></div></div>
+	
+<div class="menu__container menu__container--2">
+<div class="menu">
 <a href="https://hzhack.github.io/tools/"
 <i class="fab fa-tool fa-5x"></i>
  JailBreak Tools
