--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ $(function() {
 
 <div class="menu__container menu__container--2">
 <div class="menu">
-<a href="https://hzhack.github.io/ajr/"
+<a href="https://hzhack.github.io/ajr234/"
 <i class="fab fa-tool fa-5x"></i>
  قران كريم
 </a></div></div>
