--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ footer a {color: #3c97bf;text-decoration: none;margin-right:10px;}
     </div>
 <script>
 var aText = new Array(
-  "<span class='terminal__text__span'>bash Hibaldz.sh</span>",
-  "<span class='terminal__text__span'>Welcome I'm Hibaldz</span>", 
-  "<span class='terminal__text__span'>i Love To Publish My apps For Free</span>",
-  "<span class='terminal__text__span'>Developer App Ios And Android</span>",
-  "<span class='terminal__text__span'>Developer And Hacker</span>",
+  "<span class='terminal__text__span'>bash Hz-Hck.sh</span>",
+  "<span class='terminal__text__span'>Welcome I'm Hz And Hck</span>", 
+  "<span class='terminal__text__span'>We love to offer apps for free.</span>",
+  "<span class='terminal__text__span'>Developers App Ios And Android</span>",
+  "<span class='terminal__text__span'>Developers and hackers</span>",
   "<span class='terminal__text__span'>exit()</span>");
   
 var iSpeed = 60; 
@@ -188,12 +188,6 @@ $(function() {
 	$( ".terminal" ).draggable();});
 </script>
 
-<div class="menu__container menu__container--2">
-<div class="menu">
-<a href="https://hzhack.github.io/ajr234/"
-<i class="fab fa-tool fa-5x"></i>
- قران كريم
-</a></div></div>
 	
 <div class="menu__container menu__container--2">
 <div class="menu">
@@ -232,7 +226,7 @@ $(function() {
 
 <footer><p>Created with 
 <i class="fa fa-heart"></i> by
-<a target="_blank" href="https://www.snapchat.com/add/sww_p">Hibaldz : </a>
+<a target="_blank" href="https://www.snapchat.com/add/sww_p">Hz : </a>
 <a target="_blank"  href="https://t.me/sww_q"><i class="fab fa-telegram fa-2x"></i></a>
 <a target="_blank"  href="https://www.instagram.com/sww_p/"><i class="fab fa-instagram fa-2x"></i></a>
 <a target="_blank" href="https://twitter.com/sww_p"><i class="fab fa-twitter fa-2x"></i></a>
