--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ footer a {color: #3c97bf;text-decoration: none;margin-right:10px;}
     </div>
 <script>
 var aText = new Array(
-  "<span class='terminal__text__span'>bash Hz-Hck.sh</span>",
-  "<span class='terminal__text__span'>Welcome we Hz And Hck</span>", 
+  "<span class='terminal__text__span'>bash Hz-An.sh</span>",
+  "<span class='terminal__text__span'>Welcome we Hz And An</span>", 
   "<span class='terminal__text__span'>We love to offer apps for free.</span>",
   "<span class='terminal__text__span'>Developers App Ios And Android</span>",
   "<span class='terminal__text__span'>Developers and hackers</span>",
