--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"></html><head><meta charset="UTF-8"><meta http-equiv="Content-Language" content="en-us">
-<title> HH team </title>
+<title> Hz Bahkali </title>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'>
 <link rel="shortcut icon" type="image/png" href="https://b.top4top.io/p_2376u2ebm1.png">
 <style type="text/css">
@@ -154,11 +154,11 @@ footer a {color: #3c97bf;text-decoration: none;margin-right:10px;}
     </div>
 <script>
 var aText = new Array(
-  "<span class='terminal__text__span'>bash Hz-An.sh</span>",
-  "<span class='terminal__text__span'>Welcome we Hz And An</span>", 
-  "<span class='terminal__text__span'>We love to offer apps for free.</span>",
-  "<span class='terminal__text__span'>Developers App Ios And Android</span>",
-  "<span class='terminal__text__span'>Developers and hackers</span>",
+  "<span class='terminal__text__span'>bash Hi im Hibaldz.sh</span>",
+  "<span class='terminal__text__span'>Welcome I Hz Store</span>", 
+  "<span class='terminal__text__span'>I love to offer apps for free.</span>",
+  "<span class='terminal__text__span'>Developer App Ios And Android</span>",
+  "<span class='terminal__text__span'>Developer and Hacker</span>",
   "<span class='terminal__text__span'>exit()</span>");
   
 var iSpeed = 60; 
