--- a/index.html
+++ b/index.html
@@ -168,24 +168,46 @@
       <img src="https://i.top4top.io/p_3464udj4l1.jpg" alt="شعار التطبيق" class="logo" />
       <h1>Snap Hz</h1>
       <p class="description">
-        سناب كروم هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية وإمكانية تخصيص التطبيق، ويوفر ميزات مثل حفظ الصور ومقاطع الفيديو من القصص الخاصة والعامة دون علم المرسل، ومشاهدة القصص في وضع التخفي، وتغيير الموقع، والعديد من الميزات الأخرى. 
-أهم مميزات سناب كروم:
-حفظ القصص والرسائل الخاصة:
-يمكنك حفظ الصور ومقاطع الفيديو من القصص العامة والخاصة، وكذلك حفظ الرسائل الخاصة دون أن يعلم المرسل.
-مشاهدة القصص في وضع التخفي:
-يمكنك مشاهدة القصص دون أن يظهر اسمك للمرسل، مما يعني أنه لن يعرف أنك قمت بمشاهدة قصته.
-تغيير الموقع:
-يمكنك تغيير موقعك الجغرافي في سناب شات لاستخدامه في الفلاتر أو لمشاركة موقعك في أي مكان تريده.
+      سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة، وتجاوز حظر IP، وتغيير الموقع في الخريطة، وإمكانية رفع الصور ومقاطع الفيديو من ألبوم الكاميرا، وإخفاء مشاهدة القصص والدردشات، وغيرها الكثير. 
+
+أهم مميزات سناب Hz:
+
+حفظ المحتوى:
+
+يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر. 
+
 تجاوز حظر IP:
-في حال تم حظر جهازك من قبل سناب شات، يمكنك استخدام سناب كروم لتجاوز هذا الحظر واستخدام التطبيق بشكل طبيعي.
-رفع الصور ومقاطع الفيديو من المعرض:
-يمكنك رفع الصور ومقاطع الفيديو مباشرة من معرض هاتفك إلى سناب شات.
+
+يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات. 
+
+تغيير الموقع:
+
+يمكنك تغيير موقعك في الخريطة واستخدام الفلاتر المرتبطة بالمواقع المختلفة. 
+
+رفع الصور والفيديوهات:
+
+يمكنك رفع الصور ومقاطع الفيديو من ألبوم الكاميرا إلى سناب شات، سواء للقصص أو الدردشات الخاصة. 
+
+إخفاء المشاهدة:
+
+يمكنك إخفاء مشاهدة القصص والدردشات الخاصة دون علم الطرف الآخر. 
 إخفاء قراءة الرسائل:
-يمكنك قراءة الرسائل الخاصة دون أن يظهر للمرسل أنك قمت بقراءتها.
-إخفاء لقطة الشاشة:
-يمكنك التقاط لقطة شاشة للقصص والرسائل الخاصة دون أن يعلم المرسل.
-إضافة خطوط مخصصة:
-يمكنك تغيير خط الكتابة في سناب شات وإضافة خطوط جديدة.
+يمكنك إخفاء أنك قرأت رسالة ما. 
+
+ميزات إضافية:
+
+يتضمن سناب Hz العديد من الميزات الأخرى مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وإمكانية حفظ الدردشات تلقائيًا. 
+
+نسخة آمنة:
+
+تم تجربة نسخة Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية. 
+
+تفعيل فوري:
+
+يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ. 
+
+دعم جميع الإصدارات الحديثة:
+يدعم سناب Hz جميع الإصدارات الحديث من نظام التشغيل iOS. 
       </p>
 
       <div class="screenshots">
