--- a/index.html
+++ b/index.html
@@ -168,46 +168,40 @@
       <img src="https://i.top4top.io/p_3464udj4l1.jpg" alt="شعار التطبيق" class="logo" />
       <h1>Snap Hz</h1>
       <p class="description">
-      سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة، وتجاوز حظر IP، وتغيير الموقع في الخريطة، وإمكانية رفع الصور ومقاطع الفيديو من ألبوم الكاميرا، وإخفاء مشاهدة القصص والدردشات، وغيرها الكثير. 
 
-أهم مميزات سناب Hz:
+   <h1>سناب Hz - النسخة المعدلة من سناب شات</h1>
+    <p>سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
 
-حفظ المحتوى:
+    <h2>حفظ المحتوى</h2>
+    <p>يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر.</p>
 
-يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر. 
+    <h2>تجاوز حظر IP</h2>
+    <p>يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات بسهولة وفعالية.</p>
 
-تجاوز حظر IP:
+    <h2>تغيير الموقع</h2>
+    <p>يمكنك تغيير موقعك في الخريطة والاستفادة من الفلاتر والمميزات المرتبطة بالمواقع المختلفة.</p>
 
-يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات. 
+    <h2>رفع الصور والفيديوهات</h2>
+    <p>ارفع الصور ومقاطع الفيديو من ألبوم الكاميرا إلى سناب شات مباشرة في القصص أو الدردشات الخاصة.</p>
 
-تغيير الموقع:
+    <h2>إخفاء المشاهدة</h2>
+    <p>شاهد القصص والدردشات دون أن يعرف الطرف الآخر أنك قمت بذلك.</p>
 
-يمكنك تغيير موقعك في الخريطة واستخدام الفلاتر المرتبطة بالمواقع المختلفة. 
+    <h2>إخفاء قراءة الرسائل</h2>
+    <p>يمكنك أيضاً إخفاء أنك قرأت الرسائل، لتحافظ على خصوصيتك.</p>
 
-رفع الصور والفيديوهات:
+    <h2>ميزات إضافية</h2>
+    <p>مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وحفظ الدردشات تلقائيًا.</p>
 
-يمكنك رفع الصور ومقاطع الفيديو من ألبوم الكاميرا إلى سناب شات، سواء للقصص أو الدردشات الخاصة. 
+    <h2>نسخة آمنة</h2>
+    <p>تم تجربة نسخة سناب Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية والأمان.</p>
 
-إخفاء المشاهدة:
+    <h2>تفعيل فوري</h2>
+    <p>يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ فقط!</p>
 
-يمكنك إخفاء مشاهدة القصص والدردشات الخاصة دون علم الطرف الآخر. 
-إخفاء قراءة الرسائل:
-يمكنك إخفاء أنك قرأت رسالة ما. 
-
-ميزات إضافية:
-
-يتضمن سناب Hz العديد من الميزات الأخرى مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وإمكانية حفظ الدردشات تلقائيًا. 
-
-نسخة آمنة:
-
-تم تجربة نسخة Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية. 
-
-تفعيل فوري:
-
-يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ. 
-
-دعم جميع الإصدارات الحديثة:
-يدعم سناب Hz جميع الإصدارات الحديث من نظام التشغيل iOS. 
+    <h2>دعم الإصدارات الحديثة</h2>
+    <p>يدعم سناب Hz جميع إصدارات نظام iOS الحديثة.</p>
+        
       </p>
 
       <div class="screenshots">
