--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snap Hz</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
       --bg-color: #ffffff;
-      --text-color: #000000;
+      --text-color: #444;
       --card-bg: #f0f0f0;
+      --heading-color: #6e00ff;
     }
 
     body.dark {
       --bg-color: #121212;
-      --text-color: #ffffff;
+      --text-color: #dddddd;
       --card-bg: #1e1e1e;
+      --heading-color: #bb86fc;
     }
 
     body {
@@ -24,6 +26,10 @@
       font-family: 'Tahoma', sans-serif;
       margin: 0;
       padding: 0;
+    }
+
+    h1, h2 {
+      color: var(--heading-color);
     }
 
     .container {
@@ -54,7 +60,7 @@
     .description {
       font-size: 16px;
       margin-bottom: 20px;
-      line-height: 1.6;
+      line-height: 1.8;
     }
 
     .screenshots {
@@ -151,7 +157,8 @@
 
     footer a {
       color: #007aff;
-      margin: 0 5px;
+      margin: 0 8px;
+      font-size: 22px;
       text-decoration: none;
     }
 
@@ -166,43 +173,40 @@
   <div class="container">
     <div class="app-card">
       <img src="https://i.top4top.io/p_3464udj4l1.jpg" alt="شعار التطبيق" class="logo" />
-      <h1>Snap Hz</h1>
-      <p class="description">
+      <h1>سناب Hz - النسخة المعدلة من سناب شات</h1>
+      <div class="description">
+        <p>سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
 
-   <h1>سناب Hz - النسخة المعدلة من سناب شات</h1>
-    <p>سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
+        <h2>حفظ المحتوى</h2>
+        <p>يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر.</p>
 
-    <h2>حفظ المحتوى</h2>
-    <p>يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر.</p>
+        <h2>تجاوز حظر IP</h2>
+        <p>يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات بسهولة وفعالية.</p>
 
-    <h2>تجاوز حظر IP</h2>
-    <p>يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات بسهولة وفعالية.</p>
+        <h2>تغيير الموقع</h2>
+        <p>يمكنك تغيير موقعك في الخريطة والاستفادة من الفلاتر والمميزات المرتبطة بالمواقع المختلفة.</p>
 
-    <h2>تغيير الموقع</h2>
-    <p>يمكنك تغيير موقعك في الخريطة والاستفادة من الفلاتر والمميزات المرتبطة بالمواقع المختلفة.</p>
+        <h2>رفع الصور والفيديوهات</h2>
+        <p>ارفع الصور ومقاطع الفيديو من ألبوم الكاميرا إلى سناب شات مباشرة في القصص أو الدردشات الخاصة.</p>
 
-    <h2>رفع الصور والفيديوهات</h2>
-    <p>ارفع الصور ومقاطع الفيديو من ألبوم الكاميرا إلى سناب شات مباشرة في القصص أو الدردشات الخاصة.</p>
+        <h2>إخفاء المشاهدة</h2>
+        <p>شاهد القصص والدردشات دون أن يعرف الطرف الآخر أنك قمت بذلك.</p>
 
-    <h2>إخفاء المشاهدة</h2>
-    <p>شاهد القصص والدردشات دون أن يعرف الطرف الآخر أنك قمت بذلك.</p>
+        <h2>إخفاء قراءة الرسائل</h2>
+        <p>يمكنك أيضاً إخفاء أنك قرأت الرسائل، لتحافظ على خصوصيتك.</p>
 
-    <h2>إخفاء قراءة الرسائل</h2>
-    <p>يمكنك أيضاً إخفاء أنك قرأت الرسائل، لتحافظ على خصوصيتك.</p>
+        <h2>ميزات إضافية</h2>
+        <p>مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وحفظ الدردشات تلقائيًا.</p>
 
-    <h2>ميزات إضافية</h2>
-    <p>مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وحفظ الدردشات تلقائيًا.</p>
+        <h2>نسخة آمنة</h2>
+        <p>تم تجربة نسخة سناب Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية والأمان.</p>
 
-    <h2>نسخة آمنة</h2>
-    <p>تم تجربة نسخة سناب Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية والأمان.</p>
+        <h2>تفعيل فوري</h2>
+        <p>يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ فقط!</p>
 
-    <h2>تفعيل فوري</h2>
-    <p>يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ فقط!</p>
-
-    <h2>دعم الإصدارات الحديثة</h2>
-    <p>يدعم سناب Hz جميع إصدارات نظام iOS الحديثة.</p>
-        
-      </p>
+        <h2>دعم الإصدارات الحديثة</h2>
+        <p>يدعم سناب Hz جميع إصدارات نظام iOS الحديثة.</p>
+      </div>
 
       <div class="screenshots">
         <img src="https://via.placeholder.com/400x250?text=صورة+1" alt="لقطة شاشة 1" />
@@ -228,11 +232,11 @@
     </div>
 
     <footer>
-     Hz Bahkali جميع الحقوق محفوظة 2025 © <br>
+      Hz Bahkali جميع الحقوق محفوظة 2025 © <br>
       تابعني على:
-      <a href="https://snapchat.com" target="_blank">سناب</a> |
-      <a href="https://instagram.com" target="_blank">انستقرام</a> |
-      <a href="https://t.me" target="_blank">تيليجرام</a>
+      <a href="https://www.snapchat.com/add/sww_p" target="_blank"><i class="fab fa-snapchat"></i></a>
+      <a href="https://www.instagram.com/sww_p/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://t.me/swe_p" target="_blank"><i class="fab fa-telegram"></i></a>
     </footer>
   </div>
 
