Update index.html editing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snap Hz</title>
+  <title>Snap 0x</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
@@ -173,15 +173,15 @@
   <div class="container">
     <div class="app-card">
       <img src="https://i.top4top.io/p_3464udj4l1.jpg" alt="شعار التطبيق" class="logo" />
-      <h1>سناب Hz - النسخة المعدلة من سناب شات</h1>
+      <h1>سناب 0x - النسخة المعدلة من سناب شات</h1>
       <div class="description">
-        <p>سناب Hz هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
+        <p>سناب 0x هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
 
         <h2>حفظ المحتوى</h2>
         <p>يمكنك حفظ الصور ومقاطع الفيديو من القصص والدردشات الخاصة دون علم الطرف الآخر.</p>
 
         <h2>تجاوز حظر IP</h2>
-        <p>يمكنك استخدام سناب Hz لتجاوز حظر IP الخاص بسناب شات بسهولة وفعالية.</p>
+        <p>يمكنك استخدام سناب 0x لتجاوز حظر IP الخاص بسناب شات بسهولة وفعالية.</p>
 
         <h2>تغيير الموقع</h2>
         <p>يمكنك تغيير موقعك في الخريطة والاستفادة من الفلاتر والمميزات المرتبطة بالمواقع المختلفة.</p>
@@ -205,12 +205,14 @@
         <p>يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ فقط!</p>
 
         <h2>دعم الإصدارات الحديثة</h2>
-        <p>يدعم سناب Hz جميع إصدارات نظام iOS الحديثة.</p>
+        <p>يدعم سناب 0x جميع إصدارات نظام iOS الحديثة.</p>
       </div>
 
       <div class="screenshots">
-        <img src="https://via.placeholder.com/400x250?text=صورة+1" alt="لقطة شاشة 1" />
-        <img src="https://via.placeholder.com/400x250?text=صورة+2" alt="لقطة شاشة 2" />
+        <img src="https://c.top4top.io/p_3470d2k5r0.png" alt="لقطة شاشة 1" />
+        <img src="https://d.top4top.io/p_3470iaomu1.png" alt="لقطة شاشة 2" />
+        <img src="https://e.top4top.io/p_3470vfcdu2.png" alt="لقطة شاشة 3" />
+        <img src="https://f.top4top.io/p_34703r88p3.png" alt="لقطة شاشة 4" />
       </div>
 
       <div class="btns">
@@ -232,7 +234,7 @@
     </div>
 
     <footer>
-      Hz Bahkali جميع الحقوق محفوظة 2025 © <br>
+      0x Team جميع الحقوق محفوظة 2025 © <br>
       تابعني على:
       <a href="https://www.snapchat.com/add/sww_p" target="_blank"><i class="fab fa-snapchat"></i></a>
       <a href="https://www.instagram.com/sww_p/" target="_blank"><i class="fab fa-instagram"></i></a>
