--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <body>
   <div class="container">
     <div class="app-card">
-      <img src="https://i.top4top.io/p_3464udj4l1.jpg" alt="شعار التطبيق" class="logo" />
+      <img src="https://e.top4top.io/p_347078cxw0.png" alt="شعار التطبيق" class="logo" />
       <h1>سناب 0x - النسخة المعدلة من سناب شات</h1>
       <div class="description">
         <p>سناب 0x هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
@@ -199,10 +199,10 @@
         <p>مثل تغيير خلفية الدردشة، وتغيير خط الكتابة، وحفظ الدردشات تلقائيًا.</p>
 
         <h2>نسخة آمنة</h2>
-        <p>تم تجربة نسخة سناب Hz لأكثر من شهر وهي من أقوى النسخ من حيث الحماية والأمان.</p>
+        <p>تم تجربة نسخة سناب 0x لأكثر من خمسة أشهر وهي من أقوى النسخ من حيث الحماية والأمان.</p>
 
         <h2>تفعيل فوري</h2>
-        <p>يتم تسليم وتفعيل كود سناب Hz في غضون 5 ثوانٍ فقط!</p>
+        <p>يتم تسليم وتفعيل كود سناب 0x في غضون 5 ثوانٍ فقط!</p>
 
         <h2>دعم الإصدارات الحديثة</h2>
         <p>يدعم سناب 0x جميع إصدارات نظام iOS الحديثة.</p>
