--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
 
       <div class="btns">
-        <a href="https://example.com/app.ipa" class="install-btn" target="_blank">تثبيت التطبيق</a>
+        <a href="https://l.top4top.io/p_3471tspkx0.png" class="install-btn" target="_blank">تثبيت التطبيق</a>
         <button class="buy-btn" onclick="togglePayment()">شراء الكود</button>
       </div>
 
