--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <body>
   <div class="container">
     <div class="app-card">
-      <img src="https://h.top4top.io/p_3471fsa540.jpg" alt="شعار التطبيق" class="logo" />
+      <img src="https://g.top4top.io/p_3471dq11k0.png" alt="شعار التطبيق" class="logo" />
       <h1>سناب 0x - النسخة المعدلة من سناب شات</h1>
       <div class="description">
         <p>سناب 0x هو نسخة معدلة من تطبيق سناب شات توفر ميزات إضافية مثل حفظ الصور ومقاطع الفيديو، وتجاوز حظر IP، وتغيير الموقع، وميزات الخصوصية، وغيرها الكثير.</p>
@@ -216,7 +216,7 @@
       </div>
 
       <div class="btns">
-        <a href="https://l.top4top.io/p_3471tspkx0.png" class="install-btn" target="_blank">تثبيت التطبيق</a>
+        <a href="https://h.top4top.io/p_3471q4bpq1.jpg" class="install-btn" target="_blank">تثبيت التطبيق</a>
         <button class="buy-btn" onclick="togglePayment()">شراء الكود</button>
       </div>
 
