--- a/Findex.html
+++ b/Findex.html
@@ -2,173 +2,115 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>أقوى موقع تطبيقات أندرويد</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>سناب المعدل - تحت التجربة</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Cairo', sans-serif;
-    }
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
-      color: white;
-    }
-    header {
-      padding: 20px;
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(135deg, #000000, #1f1f1f);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       text-align: center;
-      background-color: #111;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      color: #00ffd5;
+
+    .container {
+      background-color: rgba(20, 20, 20, 0.9);
+      border: 2px solid #ffcc00;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 0 25px #ffcc00;
+      max-width: 500px;
+      width: 90%;
+      animation: fadeIn 1.5s ease;
     }
-    .app-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 30px;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    .app-card {
-      background-color: #1b1b1b;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
+
+    .logo {
+      width: 120px;
+      margin-bottom: 20px;
+      border-radius: 10px;
     }
-    .app-card:hover {
-      transform: translateY(-5px);
+
+    h1 {
+      color: #ffcc00;
+      margin-bottom: 15px;
     }
-    .app-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
+
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+      line-height: 1.7;
     }
-    .app-content {
-      padding: 15px;
+
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 25px 0;
+      flex-wrap: wrap;
     }
-    .app-content h3 {
-      margin: 0 0 10px;
-      color: #00ffd5;
-    }
-    .app-content p {
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-    .download-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #00ffd5;
-      color: #000;
-      border: none;
-      border-radius: 8px;
+
+    .social-links a {
       text-decoration: none;
+      background-color: #ffcc00;
+      color: #000;
+      padding: 10px 15px;
+      border-radius: 10px;
       font-weight: bold;
+      transition: background-color 0.3s ease;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #0f0f0f;
-      color: #aaa;
-      font-size: 0.9rem;
+
+    .social-links a:hover {
+      background-color: #e6b800;
+    }
+
+    .social-links i {
+      margin-left: 5px;
+    }
+
+    .back-btn {
+      background-color: transparent;
+      border: 2px solid #ffcc00;
+      color: #ffcc00;
+      padding: 10px 25px;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .back-btn:hover {
+      background-color: #ffcc00;
+      color: #000;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>أقوى موقع تطبيقات أندرويد</h1>
-  </header>
+  <div class="container">
+    <img class="logo" src="logo.png" alt="0x Team Logo" />
+    
+    <h1>🚧 تحت التجربة 🚧</h1>
+    <p>ما زالت التجارب شغالة حالياً على سناب المعدل.</p>
+    <p>نختبر الحماية والتعديلات لضمان أفضل تجربة لكم.</p>
 
-  <section class="app-grid">
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+1" alt="App 1">
-      <div class="app-content">
-        <h3>تطبيق 1</h3>
-        <p>وصف مختصر عن التطبيق الأول. تطبيق مفيد وسهل الاستخدام.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
+    <div class="social-links">
+      <a href="https://t.me/your_telegram" target="_blank"><i class="fab fa-telegram-plane"></i>تيليجرام</a>
+      <a href="https://twitter.com/your_twitter" target="_blank"><i class="fab fa-twitter"></i>تويتر</a>
+      <a href="https://www.snapchat.com/add/your_snap" target="_blank"><i class="fab fa-snapchat-ghost"></i>سناب</a>
     </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+2" alt="App 2">
-      <div class="app-content">
-        <h3>تطبيق 2</h3>
-        <p>تطبيق رائع لتحسين الأداء اليومي وإنجاز المهام بسهولة.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+3" alt="App 3">
-      <div class="app-content">
-        <h3>تطبيق 3</h3>
-        <p>أفضل تطبيق للترفيه والمحتوى الرقمي بجودة عالية.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+4" alt="App 4">
-      <div class="app-content">
-        <h3>تطبيق 4</h3>
-        <p>تطبيق تعليمي شامل يحتوي على محتوى تفاعلي وشيق.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+5" alt="App 5">
-      <div class="app-content">
-        <h3>تطبيق 5</h3>
-        <p>تطبيق لتنظيم الوقت والمهام اليومية بذكاء.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+6" alt="App 6">
-      <div class="app-content">
-        <h3>تطبيق 6</h3>
-        <p>تطبيق تواصل اجتماعي حديث بواجهة جذابة وسريعة.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+7" alt="App 7">
-      <div class="app-content">
-        <h3>تطبيق 7</h3>
-        <p>أداة ذكية لحفظ الملاحظات وتنظيم الأفكار.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+8" alt="App 8">
-      <div class="app-content">
-        <h3>تطبيق 8</h3>
-        <p>تطبيق للقراءة والاستماع للكتب الصوتية بسهولة.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+9" alt="App 9">
-      <div class="app-content">
-        <h3>تطبيق 9</h3>
-        <p>أفضل تطبيق لتحرير الصور والفيديوهات.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-    <div class="app-card">
-      <img src="https://via.placeholder.com/300x200.png?text=App+10" alt="App 10">
-      <div class="app-content">
-        <h3>تطبيق 10</h3>
-        <p>تطبيق يقدم أدوات احترافية للمطورين والمصممين.</p>
-        <a href="#" class="download-button">تحميل</a>
-      </div>
-    </div>
-  </section>
 
-  <footer>
-    &copy; 2025 جميع الحقوق محفوظة | صمم بواسطة صابر
-  </footer>
+    <button class="back-btn" onclick="history.back()">🔙 رجوع</button>
+  </div>
 </body>
 </html>
