--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="logo.png" alt="0x Team Logo" />
+    <img class="logo" src="https://b.top4top.io/p_348251pz20.png" alt="0x Team Logo" />
     
     <h1>🚧 تحت التجربة 🚧</h1>
     <p>ما زالت التجارب شغالة حالياً على سناب المعدل.</p>
     <p>نختبر الحماية والتعديلات لضمان أفضل تجربة لكم.</p>
 
     <div class="social-links">
-      <a href="https://t.me/your_telegram" target="_blank"><i class="fab fa-telegram-plane"></i>تيليجرام</a>
-      <a href="https://twitter.com/your_twitter" target="_blank"><i class="fab fa-twitter"></i>تويتر</a>
-      <a href="https://www.snapchat.com/add/your_snap" target="_blank"><i class="fab fa-snapchat-ghost"></i>سناب</a>
+      <a href="https://t.me/+SrNJO0OctAIYDseZ" target="_blank"><i class="fab fa-telegram-plane"></i>تيليجرام</a>
+      <a href="https://www.instagram.com/sww_p/" target="_blank"><i class="fab fa-instagram"></i>انستقرام</a>
+      <a href="https://www.snapchat.com/add/sww_p" target="_blank"><i class="fab fa-snapchat-ghost"></i>سناب</a>
     </div>
 
     <button class="back-btn" onclick="history.back()">🔙 رجوع</button>
